[tool.poetry]
name = "process-sales"
version = "0.1.0"
description = ""
authors = ["TDI <tech@thedataincubator.com>"]

[tool.poetry.dependencies]
python = "3.10.8"
pandas = "1.5.2"
numpy = "1.23.5"
boto3 = "1.26.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
